--- a/GameOfGoogol/index.html
+++ b/GameOfGoogol/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 Da Rules:<br>
-You are given a set of unknown integers, values ranging from 0 to 10^100.<br>
+You are given a set of unknown integers, values ranging from 0 to 10^100. You choose how many unknowns there are.<br>
 The values are randomly generated and shuffled.<br>
 You can choose to reveal an integer and then can choose to either reveal another or choose the revealed number.<br>
 If you reveal another number, you can only choose the newly revealed number.<br>
