--- a/GameOfGoogol/index.html
+++ b/GameOfGoogol/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Game of Googol</title>
     <script src="knockout-3.5.0.js"></script>
+    <link rel="icon" type="image/png" href="favicon.png"/>
     <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <style>
         .arrDisplay {
